Diplom часть 3. Дополнительный сервис Комментарии. • исправления после первого ревью.