@@ -23,6 +23,7 @@ import ru.practicum.explore_with_me.handler.exceptions.*;
 import ru.practicum.explore_with_me.mapper.EventMapper;
 import ru.practicum.explore_with_me.mapper.LocationMapper;
 import ru.practicum.explore_with_me.model.*;
+import ru.practicum.explore_with_me.repository.CommentRepository;
 import ru.practicum.explore_with_me.repository.EventRepository;
 import ru.practicum.explore_with_me.service.category.CategoryService;
 import ru.practicum.explore_with_me.service.request.ParticipationRequestService;
@@ -54,6 +55,7 @@ public class EventServiceImpl implements EventService {
     private final WebClientService statsClient;
     private final ParticipationRequestService participationRequestService;
     private final LocationMapper locationMapper;
+    private final CommentRepository commentRepository;
     private static final String nameApp = "ewm-service";
 
     /**
@@ -66,8 +68,10 @@ public class EventServiceImpl implements EventService {
         Pageable pageable = PageRequest.of(from, size, Sort.by("id").ascending());
 
         Predicate predicate = event.initiator.id.ne(userId);
-        List<EventShortDto> result = eventRepository.findAll(predicate, pageable)
-                .stream().map(eventMapper::mapToShortDto).collect(Collectors.toList());
+        List<Event> events = eventRepository.findAll(predicate, pageable).toList();
+
+        List<EventShortDto> result = events.stream()
+                .map(eventMapper::mapToShortDto).collect(Collectors.toList());
         log.info("Выдан результат запроса о своих событиях ({} событий), для пользователя с ID = {} и name = {}.",
                 result.size(), userFromDb.getId(), userFromDb.getName());
         return result;
@@ -338,6 +342,7 @@ public class EventServiceImpl implements EventService {
         //Заполняем количество просмотров для списка событий.
         events = utilService.fillConfirmedRequests(events, confirmedRequests);
         Event result = events.get(0);
+        result.setComments(commentRepository.countCommentsForEvent(eventId));
         log.info("Выполнено обновление события с ID = {}.", eventId);
         return eventMapper.mapFromModelToFullDto(result);
     }
@@ -375,6 +380,7 @@ public class EventServiceImpl implements EventService {
         Event result = events.get(0);
         statsClient.save(nameApp, httpServletRequest.getRequestURI(),
                 httpServletRequest.getRemoteAddr(), LocalDateTime.now());
+        result.setComments(commentRepository.countCommentsForEvent(result.getId()));
         log.info("Отправлен ответ на запрос события по ID = {} в общедоступном режиме ", eventId);
         return eventMapper.mapFromModelToFullDto(result);
     }
@@ -412,6 +418,7 @@ public class EventServiceImpl implements EventService {
         //Заполняем количество просмотров для списка событий.
         events = utilService.fillConfirmedRequests(events, confirmedRequests);
         Event result = events.get(0);
+        result.setComments(commentRepository.countCommentsForEvent(result.getId()));
         log.info("Отправлен ответ на запрос собственного события по ID = {} в приватном режиме ", eventId);
         return eventMapper.mapFromModelToFullDto(result);
     }
@@ -446,6 +453,7 @@ public class EventServiceImpl implements EventService {
         //Заполняем количество просмотров для списка событий.
         events = utilService.fillConfirmedRequests(events, confirmedRequests);
         Event result = events.get(0);
+        result.setComments(commentRepository.countCommentsForEvent(result.getId()));
         log.info("Отправлен ответ на запрос об отмене события с ID = {} пользователем с ID = {}.", eventId, userId);
         return eventMapper.mapFromModelToFullDto(result);
     }
@@ -498,6 +506,7 @@ public class EventServiceImpl implements EventService {
         //Заполняем количество просмотров для списка событий.
         events = utilService.fillConfirmedRequests(events, confirmedRequests);
         Event result = events.get(0);
+        result.setComments(commentRepository.countCommentsForEvent(result.getId()));
         log.info("Выполнено обновление события с ID = {}.", eventId);
 
         return eventMapper.mapFromModelToFullDto(result);
@@ -546,6 +555,7 @@ public class EventServiceImpl implements EventService {
         eventFromDb.setPublishedOn(LocalDateTime.now());
         Event saved = eventRepository.save(eventFromDb);
         log.info("Опубликовано событие с ID = {}.", eventId);
+        saved.setComments(commentRepository.countCommentsForEvent(saved.getId()));
 
         return eventMapper.mapFromModelToFullDto(saved);
     }
@@ -803,5 +813,4 @@ public class EventServiceImpl implements EventService {
         events = utilService.fillConfirmedRequests(events, confirmedRequests);
         return events;
     }
-
 }
